--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <a class="footer-logo link" href="./index.html">
-        <span class="logo-text1">Web</span
-        ><span class="logo-text2">Studio</span>
+        <span class="footer-logo-text1">Web</span
+        ><span class="footer-logo-text2">Studio</span>
       </a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
