--- a/portfolio.html
+++ b/portfolio.html
@@ -1,97 +1,195 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="./portfolio.html">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
-            </ul>
-        </nav>
-        <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
+    <header class="header">
+      <nav>
+        <a class="header-logo link" href="./index.html">
+          <span class="header-logo-text1">Web</span>
+          <span class="header-logo-text2">Studio</span>
+        </a>
+        <ul class="header-list list">
+          <li class="header-item">
+            <a class="header-link link" href="">Studio</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link link" href="">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <address class="header-adress">
+        <ul class="address-list list">
+          <li class="address-item">
+            <a class="link" href="mailto:info@devstudio.com">
+              <span class="address-text">info@devstudio.com</span>
+            </a>
+          </li>
+          <li class="address-item">
+            <a class="link" href="tel:+110001111111">
+              <span class="address-text">+11 (000) 111-11-11</span>
+            </a>
+          </li>
+        </ul>
+      </address>
     </header>
     <main>
-        <section>
-            <ul>
-                <li><button type="button">All</button></li>
-                <li><button type="button">Web Site</button></li>
-                <li><button type="button">App</button></li>
-                <li><button type="button">Design</button></li>
-                <li><button type="button">Marketing</button></li>
-            </ul>
-        </section>
-        <section>
-            <ul>
-                <a href="">
-                    <img src="./images/potfolio-img-1.jpg" alt="interface of app" width="360" height="300">
-                    <h3>Banking App Interface Concept</h3>
-                    <p>App</p>
-                </a>
-                <a href="">
-                    <img src="./images/potfolio-img-2.jpg" alt="pay with qr" width="360" height="300">
-                    <h3>Cashless Payment</h3>
-                    <p>Marketing</p>
-                </a>
-                <a href="">
-                    <img src="./images/potfolio-img-3.jpg" alt="interface of app on laptop" width="360" height="300">
-                    <h3>Meditation App</h3>
-                    <p>App</p>
-                </a>
-                <a href="">
-                    <img src="./images/potfolio-img-4.jpg" alt="arms on wheel" width="360" height="300">
-                    <h3>Taxi Service</h3>
-                    <p>Marketing</p>
-                </a>
-                <a href="">
-                    <img src="./images/potfolio-img-5.jpg" alt="wallpaper on phone desktop" width="360" height="300">
-                    <h3>Screen Illustrations</h3>
-                    <p>Design</p>
-                </a>
-                <a href="">
-                    <img src="./images/potfolio-img-6.jpg" alt="girl with phone" width="360" height="300">
-                    <h3>Online Courses</h3>
-                    <p>Marketing</p>
-                </a>
-                <a href="">
-                    <img src="./images/potfolio-img-7.jpg" alt="examples of istagram stories" width="360" height="300">
-                    <h3>Instagram Stories Concept</h3>
-                    <p>Design</p>
-                </a>
-                <a href="">
-                    <img src="./images/potfolio-img-8.jpg" alt="bag with vegetables and fruits" width="360" height="300">
-                    <h3>Organic Food</h3>
-                    <p>Web Site</p>
-                </a>
-                <a href="">
-                    <img src="./images/potfolio-img-9.jpg" alt="latte art" width="360" height="300">
-                    <h3>Fresh Coffee</h3>
-                    <p>Web Site</p>
-                </a>
-            </ul>
-        </section>
+      <section class="filters">
+        <h2 hidden>Filters</h2>
+        <ul class="filters-list list">
+          <li class="filters-item">
+            <button class="filters-btn" type="button">All</button>
+          </li>
+          <li class="filters-item">
+            <button class="filters-btn" type="button">Web Site</button>
+          </li>
+          <li class="filters-item">
+            <button class="filters-btn" type="button">App</button>
+          </li>
+          <li class="filters-item">
+            <button class="filters-btn" type="button">Design</button>
+          </li>
+          <li class="filters-item">
+            <button class="filters-btn" type="button">Marketing</button>
+          </li>
+        </ul>
+      </section>
+      <section class="projects">
+        <h2>Projects</h2>
+        <ul class="projects-list list">
+          <li class="projects-item"><a class="projects-link link" href="">
+            <img
+              src="./images/potfolio-img-1.jpg"
+              alt="interface of app"
+              width="360"
+              height="300"
+            />
+            <h3 class="projects-top-text">Banking App Interface Concept</h3>
+            <p class="projects-bottom-text">App</p>
+        
+        </li></a>
+          <li class="projects-item">
+          <a class="projects-link link" href="">
+            <img
+              src="./images/potfolio-img-2.jpg"
+              alt="pay with qr"
+              width="360"
+              height="300"
+            />
+            <h3 class="projects-top-text">Cashless Payment</h3>
+            <p class="projects-bottom-text">Marketing</p>
+          </a>
+          </li>
+          <li class="projects-item">
+          <a class="projects-link link" href="">
+            <img
+              src="./images/potfolio-img-3.jpg"
+              alt="interface of app on laptop"
+              width="360"
+              height="300"
+            />
+            <h3 class="projects-top-text">Meditation App</h3>
+            <p class="projects-bottom-text">App</p>
+          </a>
+          </li>
+          <li class="projects-item">
+          <a class="projects-link link" href="">
+            <img
+              src="./images/potfolio-img-4.jpg"
+              alt="arms on wheel"
+              width="360"
+              height="300"
+            />
+            <h3 class="projects-top-text">Taxi Service</h3>
+            <p class="projects-bottom-text">Marketing</p>
+          </a> class="projects-top-text"
+          </li>
+          <li class="projects-item">
+          <a class="projects-link link" href="">
+            <img
+              src="./images/potfolio-img-5.jpg"
+              alt="wallpaper on phone desktop"
+              width="360"
+              height="300"
+            />
+            <h3 class="projects-top-text">Screen Illustrations</h3>
+            <p class="projects-bottom-text">Design</p>
+          </a>
+          </li>
+          <li class="projects-item">
+          <a class="projects-link link" href="">
+            <img
+              src="./images/potfolio-img-6.jpg"
+              alt="girl with phone"
+              width="360"
+              height="300"
+            />
+            <h3 class="projects-top-text">Online Courses</h3>
+            <p class="projects-bottom-text">Marketing</p>
+          </a>
+          </li>
+          <li class="projects-item">
+          <a class="projects-link link" href="">
+            <img
+              src="./images/potfolio-img-7.jpg"
+              alt="examples of istagram stories"
+              width="360"
+              height="300"
+            />
+            <h3 class="projects-top-text">Instagram Stories Concept</h3>
+            <p class="projects-bottom-text">Design</p>
+          </a>
+          </li>
+          <li class="projects-item">
+          <a class="projects-link link" href="">
+            <img
+              src="./images/potfolio-img-8.jpg"
+              alt="bag with vegetables and fruits"
+              width="360"
+              height="300"
+            />
+            <h3 class="projects-top-text">Organic Food</h3>
+            <p class="projects-bottom-text">Web Site</p>
+          </a>
+          </li>
+          <li class="projects-item">
+          <a class="projects-link link" href="">
+            <img
+              src="./images/potfolio-img-9.jpg"
+              alt="latte art"
+              width="360"
+              height="300"
+            />
+            <h3 class="projects-top-text">Fresh Coffee</h3>
+            <p class="projects-bottom-text">Web Site</p>
+          </a>
+          </li>
+        </ul>
+      </section>
     </main>
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+      <a class="footer-logo link" href="./index.html">
+        <span class="footer-logo-text1">Web</span
+        ><span class="footer-logo-text2">Studio</span>
+      </a>
+      <p class="footer-text">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
-    
-</body>
+  </body>
 </html>
