--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       </section>
       <section class="team">
         <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
+        <ul class="team-list list">
           <li class="team-item">
             <img src="./images/mark.jpg" alt="mark" width="264" />
             <h3 class="team-top-text">Mark Guerrero</h3>
