--- a/portfolio.html
+++ b/portfolio.html
@@ -17,12 +17,12 @@
     <header class="header">
       <nav>
         <a class="header-logo link" href="./index.html">
-          <span class="header-logo-text1">Web</span>
-          <span class="header-logo-text2">Studio</span>
+          Web
+          <span class="header-studio">Studio</span>
         </a>
         <ul class="header-list list">
           <li class="header-item">
-            <a class="header-link link" href="">Studio</a>
+            <a class="header-link link" href="./index.html">Studio</a>
           </li>
           <li class="header-item">
             <a class="header-link link" href="./portfolio.html">Portfolio</a>
@@ -32,15 +32,15 @@
           </li>
         </ul>
       </nav>
-      <address class="header-adress">
+      <address class="header-address">
         <ul class="address-list list">
           <li class="address-item">
-            <a class="link" href="mailto:info@devstudio.com">
+            <a class="address-link link" href="mailto:info@devstudio.com">
               <span class="address-text">info@devstudio.com</span>
             </a>
           </li>
           <li class="address-item">
-            <a class="link" href="tel:+110001111111">
+            <a class="address-link link" href="tel:+110001111111">
               <span class="address-text">+11 (000) 111-11-11</span>
             </a>
           </li>
@@ -48,8 +48,8 @@
       </address>
     </header>
     <main>
-      <section class="filters">
-        <h2 hidden>Filters</h2>
+      <section class="portfolio">
+        <h1 class="portfolio-title" hidden>Portfolio</h1>
         <ul class="filters-list list">
           <li class="filters-item">
             <button class="filters-btn" type="button">All</button>
@@ -67,124 +67,124 @@
             <button class="filters-btn" type="button">Marketing</button>
           </li>
         </ul>
-      </section>
-      <section class="projects">
         <h2>Projects</h2>
         <ul class="projects-list list">
-          <li class="projects-item"><a class="projects-link link" href="">
-            <img
-              src="./images/potfolio-img-1.jpg"
-              alt="interface of app"
-              width="360"
-              height="300"
-            />
-            <h3 class="projects-top-text">Banking App Interface Concept</h3>
-            <p class="projects-bottom-text">App</p>
-        
-        </li></a>
           <li class="projects-item">
-          <a class="projects-link link" href="">
-            <img
-              src="./images/potfolio-img-2.jpg"
-              alt="pay with qr"
-              width="360"
-              height="300"
-            />
-            <h3 class="projects-top-text">Cashless Payment</h3>
-            <p class="projects-bottom-text">Marketing</p>
-          </a>
+            <a class="projects-link link" href="">
+              <img
+                src="./images/potfolio-img-1.jpg"
+                alt="interface of app"
+                width="360"
+                height="300"
+              />
+              <h3 class="projects-top-text">Banking App Interface Concept</h3>
+              <p class="projects-bottom-text">App</p>
+            </a>
           </li>
           <li class="projects-item">
-          <a class="projects-link link" href="">
-            <img
-              src="./images/potfolio-img-3.jpg"
-              alt="interface of app on laptop"
-              width="360"
-              height="300"
-            />
-            <h3 class="projects-top-text">Meditation App</h3>
-            <p class="projects-bottom-text">App</p>
-          </a>
+            <a class="projects-link link" href="">
+              <img
+                src="./images/potfolio-img-2.jpg"
+                alt="pay with qr"
+                width="360"
+                height="300"
+              />
+              <h3 class="projects-top-text">Cashless Payment</h3>
+              <p class="projects-bottom-text">Marketing</p>
+            </a>
           </li>
           <li class="projects-item">
-          <a class="projects-link link" href="">
-            <img
-              src="./images/potfolio-img-4.jpg"
-              alt="arms on wheel"
-              width="360"
-              height="300"
-            />
-            <h3 class="projects-top-text">Taxi Service</h3>
-            <p class="projects-bottom-text">Marketing</p>
-          </a> class="projects-top-text"
+            <a class="projects-link link" href="">
+              <img
+                src="./images/potfolio-img-3.jpg"
+                alt="interface of app on laptop"
+                width="360"
+                height="300"
+              />
+              <h3 class="projects-top-text">Meditation App</h3>
+              <p class="projects-bottom-text">App</p>
+            </a>
           </li>
           <li class="projects-item">
-          <a class="projects-link link" href="">
-            <img
-              src="./images/potfolio-img-5.jpg"
-              alt="wallpaper on phone desktop"
-              width="360"
-              height="300"
-            />
-            <h3 class="projects-top-text">Screen Illustrations</h3>
-            <p class="projects-bottom-text">Design</p>
-          </a>
+            <a class="projects-link link" href="">
+              <img
+                src="./images/potfolio-img-4.jpg"
+                alt="arms on wheel"
+                width="360"
+                height="300"
+              />
+              <h3 class="projects-top-text">Taxi Service</h3>
+              <p class="projects-bottom-text">Marketing</p>
+            </a>
+            class="projects-top-text"
           </li>
           <li class="projects-item">
-          <a class="projects-link link" href="">
-            <img
-              src="./images/potfolio-img-6.jpg"
-              alt="girl with phone"
-              width="360"
-              height="300"
-            />
-            <h3 class="projects-top-text">Online Courses</h3>
-            <p class="projects-bottom-text">Marketing</p>
-          </a>
+            <a class="projects-link link" href="">
+              <img
+                src="./images/potfolio-img-5.jpg"
+                alt="wallpaper on phone desktop"
+                width="360"
+                height="300"
+              />
+              <h3 class="projects-top-text">Screen Illustrations</h3>
+              <p class="projects-bottom-text">Design</p>
+            </a>
           </li>
           <li class="projects-item">
-          <a class="projects-link link" href="">
-            <img
-              src="./images/potfolio-img-7.jpg"
-              alt="examples of istagram stories"
-              width="360"
-              height="300"
-            />
-            <h3 class="projects-top-text">Instagram Stories Concept</h3>
-            <p class="projects-bottom-text">Design</p>
-          </a>
+            <a class="projects-link link" href="">
+              <img
+                src="./images/potfolio-img-6.jpg"
+                alt="girl with phone"
+                width="360"
+                height="300"
+              />
+              <h3 class="projects-top-text">Online Courses</h3>
+              <p class="projects-bottom-text">Marketing</p>
+            </a>
           </li>
           <li class="projects-item">
-          <a class="projects-link link" href="">
-            <img
-              src="./images/potfolio-img-8.jpg"
-              alt="bag with vegetables and fruits"
-              width="360"
-              height="300"
-            />
-            <h3 class="projects-top-text">Organic Food</h3>
-            <p class="projects-bottom-text">Web Site</p>
-          </a>
+            <a class="projects-link link" href="">
+              <img
+                src="./images/potfolio-img-7.jpg"
+                alt="examples of istagram stories"
+                width="360"
+                height="300"
+              />
+              <h3 class="projects-top-text">Instagram Stories Concept</h3>
+              <p class="projects-bottom-text">Design</p>
+            </a>
           </li>
           <li class="projects-item">
-          <a class="projects-link link" href="">
-            <img
-              src="./images/potfolio-img-9.jpg"
-              alt="latte art"
-              width="360"
-              height="300"
-            />
-            <h3 class="projects-top-text">Fresh Coffee</h3>
-            <p class="projects-bottom-text">Web Site</p>
-          </a>
+            <a class="projects-link link" href="">
+              <img
+                src="./images/potfolio-img-8.jpg"
+                alt="bag with vegetables and fruits"
+                width="360"
+                height="300"
+              />
+              <h3 class="projects-top-text">Organic Food</h3>
+              <p class="projects-bottom-text">Web Site</p>
+            </a>
+          </li>
+          <li class="projects-item">
+            <a class="projects-link link" href="">
+              <img
+                src="./images/potfolio-img-9.jpg"
+                alt="latte art"
+                width="360"
+                height="300"
+              />
+              <h3 class="projects-top-text">Fresh Coffee</h3>
+              <p class="projects-bottom-text">Web Site</p>
+            </a>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
       <a class="footer-logo link" href="./index.html">
-        <span class="footer-logo-text1">Web</span
-        ><span class="footer-logo-text2">Studio</span>
+        Web
+        <span class="footer-studio">Studio</span>
       </a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
