--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <header class="header">
       <nav>
         <a class="header-logo link" href="./index.html">
-          <span class="logo-text1">Web</span>
-          <span class="logo-text2">Studio</span>
+          Web
+          <span class="header-studio">Studio</span>
         </a>
         <ul class="header-list list">
           <li class="header-item">
-            <a class="header-link link" href="">Studio</a>
+            <a class="header-link link" href="./index.html">Studio</a>
           </li>
           <li class="header-item">
             <a class="header-link link" href="./portfolio.html">Portfolio</a>
@@ -32,15 +32,15 @@
           </li>
         </ul>
       </nav>
-      <address class="header-adress">
+      <address class="header-address">
         <ul class="address-list list">
           <li class="address-item">
-            <a class="link" href="mailto:info@devstudio.com">
+            <a class="address-link link" href="mailto:info@devstudio.com">
               <span class="address-text">info@devstudio.com</span>
             </a>
           </li>
           <li class="address-item">
-            <a class="link" href="tel:+110001111111">
+            <a class="address-link link" href="tel:+110001111111">
               <span class="address-text">+11 (000) 111-11-11</span>
             </a>
           </li>
@@ -53,7 +53,7 @@
         <button class="hero-btn" type="button">Order Service</button>
       </section>
       <section class="features">
-        <h2 hidden>features</h2>
+        <h2 hidden class="features-title">features</h2>
         <ul class="features-list list">
           <li class="features-item">
             <h3 class="features-top-text">Strategy</h3>
@@ -142,8 +142,8 @@
     </main>
     <footer class="footer">
       <a class="footer-logo link" href="./index.html">
-        <span class="footer-logo-text1">Web</span
-        ><span class="footer-logo-text2">Studio</span>
+        Web
+        <span class="footer-studio">Studio</span>
       </a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
