--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
     <main>
       <section class="portfolio">
         <h1 class="portfolio-title" hidden>Portfolio</h1>
-        <ul class="filters-list list">
+        <ul2 class="filters-list list">
           <li class="filters-item">
             <button class="filters-btn" type="button">All</button>
           </li>
@@ -66,7 +66,7 @@
           <li class="filters-item">
             <button class="filters-btn" type="button">Marketing</button>
           </li>
-        </ul>
+        </ul2
         <ul class="projects-list list">
           <li class="projects-item">
             <a class="projects-link link" href="">
@@ -76,7 +76,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="projects-top-text">Banking App Interface Concept</h3>
+              <h2 class="projects-top-text">Banking App Interface Concept</h2>
               <p class="projects-bottom-text">App</p>
             </a>
           </li>
@@ -88,7 +88,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="projects-top-text">Cashless Payment</h3>
+              <h2 class="projects-top-text">Cashless Payment</h2>
               <p class="projects-bottom-text">Marketing</p>
             </a>
           </li>
@@ -100,7 +100,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="projects-top-text">Meditation App</h3>
+              <h2 class="projects-top-text">Meditation App</h2>
               <p class="projects-bottom-text">App</p>
             </a>
           </li>
@@ -112,7 +112,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="projects-top-text">Taxi Service</h3>
+              <h2 class="projects-top-text">Taxi Service</h2>
               <p class="projects-bottom-text">Marketing</p>
             </a>
             class="projects-top-text"
@@ -125,7 +125,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="projects-top-text">Screen Illustrations</h3>
+              <h2 class="projects-top-text">Screen Illustrations</h2>
               <p class="projects-bottom-text">Design</p>
             </a>
           </li>
@@ -137,7 +137,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="projects-top-text">Online Courses</h3>
+              <h2 class="projects-top-text">Online Courses</h2>
               <p class="projects-bottom-text">Marketing</p>
             </a>
           </li>
@@ -149,7 +149,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="projects-top-text">Instagram Stories Concept</h3>
+              <h2 class="projects-top-text">Instagram Stories Concept</h2>
               <p class="projects-bottom-text">Design</p>
             </a>
           </li>
@@ -161,7 +161,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="projects-top-text">Organic Food</h3>
+              <h2 class="projects-top-text">Organic Food</h2>
               <p class="projects-bottom-text">Web Site</p>
             </a>
           </li>
@@ -173,7 +173,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="projects-top-text">Fresh Coffee</h3>
+              <h2 class="projects-top-text">Fresh Coffee</h2>
               <p class="projects-bottom-text">Web Site</p>
             </a>
           </li>
