--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
     <main>
       <section class="portfolio">
         <h1 class="portfolio-title" hidden>Portfolio</h1>
-        <ul2 class="filters-list list">
+        <ul class="filters-list list">
           <li class="filters-item">
             <button class="filters-btn" type="button">All</button>
           </li>
@@ -66,8 +66,9 @@
           <li class="filters-item">
             <button class="filters-btn" type="button">Marketing</button>
           </li>
-        </ul2
-        <ul class="projects-list list">
+        </ul>
+        <ul>
+          class="projects-list list">
           <li class="projects-item">
             <a class="projects-link link" href="">
               <img
