--- a/portfolio.html
+++ b/portfolio.html
@@ -67,8 +67,7 @@
             <button class="filters-btn" type="button">Marketing</button>
           </li>
         </ul>
-        <ul>
-          class="projects-list list">
+        <ul class="projects-list list">
           <li class="projects-item">
             <a class="projects-link link" href="">
               <img
